# BinPacking_OMP

./: Algorithm.cpp  Algorithm.h  Bin.cpp  Bin.h  BinPacking.cpp  BinPacking.h  Bound.cpp  Bound.h  Branch.cpp  Branch.h  CMakeLists.txt  DataInput.cpp  DataInput.h  Item.cpp  Item.h  LowerBound.cpp  LowerBound.h  ReadFiles.cpp  ReadFiles.h  UpperBound.cpp  UpperBound.h  main.cpp
